grey space issue resolved on mobile view

--- a/styles.css
+++ b/styles.css
@@ -261,6 +261,16 @@ html {
 }
 
 @media screen and (max-width: 576px) {
+  #home {
+    display: flex;
+    flex-direction: column;
+    background-color: rgba(0, 0, 0, 0.5);
+    height: 750px;
+    justify-content: center;
+    align-items: center;
+    color: white;
+  }
+
   .navbar {
     flex-direction: column;
     align-items: center;
